feat: rewrite to support both bw1058 and bwproxy